--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
+    "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
